--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "draft-js": "^0.10.1",
+    "es6-shim": "^0.35.3",
     "material-ui": "^0.19.1",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
