--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "nodemon": "nodemon ./bin/www",
-    "startNode": "node app.js"
+    "nodemonStart": "nodemon ./bin/www",
+    "startServer": "node server.js",
+    "nodemonServer": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
