--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^8.10.1",
+    "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
     "draft-js": "^0.10.1",
     "es6-shim": "^0.35.3",
+    "events": "^1.1.1",
+    "history": "^4.7.2",
     "material-ui": "^0.19.1",
+    "pusher": "^1.5.1",
+    "pusher-js": "^4.1.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
