--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "nodemonStart": "nodemon ./bin/www",
+    "start": "nodemon server.js",
     "startServer": "node server.js",
-    "nodemonServer": "nodemon server.js"
+    "startWWW": "node ./bin/www",
+    "nodemonWWW": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -18,6 +18,7 @@
     "morgan": "~1.8.1",
     "node-fetch": "^1.7.3",
     "nodemon": "^1.12.0",
+    "pusher": "^1.5.1",
     "serve-favicon": "~2.4.2"
   }
 }
